--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
 	<header>
 		<div class="container">
 			<div class="row">
-				<div class="col-12">
+				<div class="col-7">
 					<nav class="nav">
 						<a href="#" class="nav-logo pl-5">
 							<div>
 								<img class="logo" src="image/logo2.png">
 							</div>
 						</a>
-						<a class="a-none menu" href="#">FEATURES</a>
-						<a class="a-none menu" href="#contact">CONTACT</a>
+					</div>
+					<div class="col-5">
+						<div class="contenedor-menu">
+							<a class="a-none menu" href="#">FEATURES</a>
+							<a class="a-none menu" href="#contact">CONTACT</a>
+						</div>
 					</nav>
 				</div>
 			</div>
@@ -32,17 +36,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-8 pb-5">
-							<h1 class="titulo">Beautiful High Converting Landing Page</h1>
-							<p class="parrafo">Backyard is a modern and customizable landing page template designed to increase conversion of yor product. Backyard is flexible to suit any kind of your bussines. Try now and join with our happy customers!</p>
+					<h1 class="titulo">Beautiful High Converting Landing Page</h1>
+					<p class="parrafo">Backyard is a modern and customizable landing page template designed to increase conversion of yor product. Backyard is flexible to suit any kind of your bussines. Try now and join with our happy customers!</p>
 				</div>
 				<div class="col-4 text-center">
 					<div class="form">
-								<h2 class="pb-2">Get Started!</h2>
-								<form>
-									<input type="text" class="form-control" placeholder="Your name"></input>
-									<input type="text" class="form-control" placeholder="E-mail"></input>
-									<button class="btn-suscribe">Suscribe</button>
-								</form>
+						<h2 class="pb-2">Get Started!</h2>
+						<form>
+							<input type="text" class="form-control" placeholder="Your name"></input>
+							<input type="text" class="form-control" placeholder="E-mail"></input>
+							<button class="btn-suscribe">Suscribe</button>
+						</form>
 					</div>
 				</div>
 			</div>
